--- a/app/src/main/res/layout/cardview_character.xml
+++ b/app/src/main/res/layout/cardview_character.xml
@@ -6,7 +6,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:background="@color/almostWhite">
 
         <TextView
