--- a/app/src/main/res/layout/cardview_comic.xml
+++ b/app/src/main/res/layout/cardview_comic.xml
@@ -12,12 +12,18 @@
 
         <TextView
             android:id="@+id/comic_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:textColor="@color/black"
+            android:gravity="center_vertical"
+            android:textSize="16sp"
             android:text="@string/app_name"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"/>
 
     </android.support.constraint.ConstraintLayout>
 
