--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,24 @@
         android:id="@+id/main_title_textview"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="@string/comics_title"
+        android:text="@string/main_title"
         android:textColor="@color/black"
         android:textSize="18sp"
+        android:textStyle="bold"
+        android:textAllCaps="true"
+        android:background="@color/almostWhite"
         android:textAlignment="center"
         android:gravity="center_vertical"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/main_title_textview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -24,7 +36,7 @@
         android:id="@+id/character_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/main_title_textview"
+        app:layout_constraintTop_toBottomOf="@id/divider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
