--- a/app/src/main/res/layout/custom_dialog_comics.xml
+++ b/app/src/main/res/layout/custom_dialog_comics.xml
@@ -5,25 +5,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/title_textview"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="@string/main_title"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:textAlignment="center"
-        android:gravity="center_vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/comics_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/title_textview"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:listItem="@layout/cardview_comics"/>
